--- a/ProjectBackend/package.json
+++ b/ProjectBackend/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
